--- a/SWP291_Team2_SE1829NJ/nbproject/private/private.properties
+++ b/SWP291_Team2_SE1829NJ/nbproject/private/private.properties
@@ -1,12 +1,12 @@
-deploy.ant.properties.file=C:\\Users\\hongo\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
+deploy.ant.properties.file=C:\\Users\\HUNG\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\lib-20240519T165503Z-001\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\lib-20240519T165503Z-001\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.jaxb-api-2.1.jar=D:\\lib-20240519T165503Z-001\\lib\\jaxb-api-2.1.jar
 file.reference.mysql-connector-j-8.2.0.jar=D:\\lib-20240519T165503Z-001\\lib\\mysql-connector-j-8.3.0.jar
 file.reference.sqljdbc42.jar=D:\\lib-20240519T165503Z-001\\lib\\sqljdbc42.jar
-j2ee.server.home=C:/Users/hongo/Downloads/apache-tomcat-10.1.19
-j2ee.server.instance=tomcat101:home=C:\\Users\\hongo\\Downloads\\apache-tomcat-10.1.19
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
+j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\hongo\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\HUNG\\AppData\\Roaming\\NetBeans\\17\\build.properties
