--- a/SWP291_Team2_SE1829NJ/nbproject/project.properties
+++ b/SWP291_Team2_SE1829NJ/nbproject/project.properties
@@ -27,16 +27,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\SE_semester5\\SWP391\\Project\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=D:\\lib-20240519T165503Z-001\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\SE_semester5\\SWP391\\Project\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=D:\\lib-20240519T165503Z-001\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.jaxb-api-2.1.jar=D:\\SE_semester5\\SWP391\\Project\\lib\\jaxb-api-2.1.jar
-file.reference.jaxb-api-2.1.jar-1=D:\\lib-20240519T165503Z-001\\lib\\jaxb-api-2.1.jar
-file.reference.mysql-connector-j-8.2.0.jar=D:\\SE_semester5\\SWP391\\Project\\lib\\mysql-connector-j-8.2.0.jar
-file.reference.mysql-connector-j-8.3.0.jar=D:\\lib-20240519T165503Z-001\\lib\\mysql-connector-j-8.3.0.jar
-file.reference.sqljdbc42.jar=D:\\SE_semester5\\SWP391\\Project\\lib\\sqljdbc42.jar
-file.reference.sqljdbc42.jar-1=D:\\lib-20240519T165503Z-001\\lib\\sqljdbc42.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-2=D:\\SE_semester5\\SWP391\\Project\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-2=D:\\SE_semester5\\SWP391\\Project\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jaxb-api-2.1.jar-2=D:\\SE_semester5\\SWP391\\Project\\lib\\jaxb-api-2.1.jar
+file.reference.mysql-connector-j-8.2.0.jar-1=D:\\SE_semester5\\SWP391\\Project\\lib\\mysql-connector-j-8.2.0.jar
+file.reference.sqljdbc42.jar-2=D:\\SE_semester5\\SWP391\\Project\\lib\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -46,16 +41,11 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.jaxb-api-2.1.jar}:\
-    ${file.reference.mysql-connector-j-8.2.0.jar}:\
-    ${file.reference.sqljdbc42.jar}:\
-    ${file.reference.mysql-connector-j-8.3.0.jar}:\
-    ${file.reference.sqljdbc42.jar-1}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}:\
-    ${file.reference.jaxb-api-2.1.jar-1}
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-2}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-2}:\
+    ${file.reference.jaxb-api-2.1.jar-2}:\
+    ${file.reference.mysql-connector-j-8.2.0.jar-1}:\
+    ${file.reference.sqljdbc42.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
