--- a/SWP291_Team2_SE1829NJ/web/WEB-INF/web.xml
+++ b/SWP291_Team2_SE1829NJ/web/WEB-INF/web.xml
@@ -12,6 +12,10 @@
         <servlet-name>Dashboard</servlet-name>
         <servlet-class>controller.admin.Dashboard</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>roomManagement</servlet-name>
+        <servlet-class>controller.admin.roomManagement</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -23,5 +27,9 @@
     <servlet-mapping>
         <servlet-name>Dashboard</servlet-name>
         <url-pattern>/dashboard</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>roomManagement</servlet-name>
+        <url-pattern>/roommanagement</url-pattern>
     </servlet-mapping>
 </web-app>
