--- a/SWP291_Team2_SE1829NJ/web/WEB-INF/web.xml
+++ b/SWP291_Team2_SE1829NJ/web/WEB-INF/web.xml
@@ -60,6 +60,22 @@
         <servlet-name>accDelete</servlet-name>
         <servlet-class>controller.admin.accDelete</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>roomManage</servlet-name>
+        <servlet-class>controller.manager.roomManage</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>roomDelete</servlet-name>
+        <servlet-class>controller.manager.roomDelete</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>roomCreate</servlet-name>
+        <servlet-class>controller.manager.roomCreate</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>roomEdit</servlet-name>
+        <servlet-class>controller.manager.roomEdit</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -72,7 +88,6 @@
         <servlet-name>Dashboard</servlet-name>
         <url-pattern>/dashboard</url-pattern>
     </servlet-mapping>
-
     <servlet-mapping>
         <servlet-name>accountManagement</servlet-name>
         <url-pattern>/accountmanagement</url-pattern>
@@ -116,5 +131,21 @@
     <servlet-mapping>
         <servlet-name>accDelete</servlet-name>
         <url-pattern>/accdelete</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>roomManage</servlet-name>
+        <url-pattern>/roommanagement</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>roomDelete</servlet-name>
+        <url-pattern>/roomdelete</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>roomCreate</servlet-name>
+        <url-pattern>/roomcreate</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>roomEdit</servlet-name>
+        <url-pattern>/roomedit</url-pattern>
     </servlet-mapping>
 </web-app>
