--- a/SWP291_Team2_SE1829NJ/web/WEB-INF/web.xml
+++ b/SWP291_Team2_SE1829NJ/web/WEB-INF/web.xml
@@ -40,6 +40,10 @@
         <servlet-name>ViewCustomerServlet</servlet-name>
         <servlet-class>controller.marketer.ViewCustomerServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ListFeedbackServlet</servlet-name>
+        <servlet-class>controller.marketer.ListFeedbackServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -79,5 +83,9 @@
     <servlet-mapping>
         <servlet-name>ViewCustomerServlet</servlet-name>
         <url-pattern>/viewcustomer</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ListFeedbackServlet</servlet-name>
+        <url-pattern>/listfeedback</url-pattern>
     </servlet-mapping>
 </web-app>
