--- a/SWP291_Team2_SE1829NJ/web/WEB-INF/web.xml
+++ b/SWP291_Team2_SE1829NJ/web/WEB-INF/web.xml
@@ -45,20 +45,8 @@
         <servlet-class>controller.homepage</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>accDetail</servlet-name>
-        <servlet-class>controller.admin.accDetail</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>accCreate</servlet-name>
-        <servlet-class>controller.admin.accCreate</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>accEdit</servlet-name>
-        <servlet-class>controller.admin.accEdit</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>accDelete</servlet-name>
-        <servlet-class>controller.admin.accDelete</servlet-class>
+        <servlet-name>SubmitFeedback</servlet-name>
+        <servlet-class>controller.SubmitFeedback</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
@@ -105,19 +93,15 @@
         <url-pattern>/homepage</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>accDetail</servlet-name>
-        <url-pattern>/accdetail</url-pattern>
+        <servlet-name>SubmitFeedback</servlet-name>
+        <url-pattern>/submitfeedback</url-pattern>
     </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>accCreate</servlet-name>
-        <url-pattern>/acccreate</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>accEdit</servlet-name>
-        <url-pattern>/accedit</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>accDelete</servlet-name>
-        <url-pattern>/accdelete</url-pattern>
-    </servlet-mapping>
+<servlet>
+    <servlet-name>SubmitFeedbackus</servlet-name>
+    <servlet-class>controller.SubmitFeedbackus</servlet-class>
+</servlet>
+<servlet-mapping>
+    <servlet-name>SubmitFeedbackus</servlet-name>
+    <url-pattern>/submitFeedback</url-pattern>
+</servlet-mapping>
 </web-app>
