--- a/SWP291_Team2_SE1829NJ/web/WEB-INF/web.xml
+++ b/SWP291_Team2_SE1829NJ/web/WEB-INF/web.xml
@@ -92,7 +92,14 @@
         <servlet-name>SubmitFeedbackus</servlet-name>
         <servlet-class>controller.SubmitFeedbackus</servlet-class>
     </servlet>
-    
+    <servlet>
+        <servlet-name>SearchRoom</servlet-name>
+        <servlet-class>controller.room.SearchRoom</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>EditProfile</servlet-name>
+        <servlet-class>controller.EditProfile</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -180,5 +187,13 @@
     <servlet-mapping>
         <servlet-name>SubmitFeedbackus</servlet-name>
         <url-pattern>/submitFeedback</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SearchRoom</servlet-name>
+        <url-pattern>/roomsearch</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>EditProfile</servlet-name>
+        <url-pattern>/editprofile</url-pattern>
     </servlet-mapping>
 </web-app>
