hung với hiệp hợp tác
hợp tác cùng code

--- a/SWP291_Team2_SE1829NJ/web/WEB-INF/web.xml
+++ b/SWP291_Team2_SE1829NJ/web/WEB-INF/web.xml
@@ -100,6 +100,34 @@
         <servlet-name>EditProfile</servlet-name>
         <servlet-class>controller.EditProfile</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ListBlogServlet</servlet-name>
+        <servlet-class>controller.ListBlogServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ViewRoomServlet</servlet-name>
+        <servlet-class>controller.ViewRoomServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ViewBlogServlet</servlet-name>
+        <servlet-class>controller.ViewBlogServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DeleteFeedbackSerlet</servlet-name>
+        <servlet-class>controller.marketer.DeleteFeedbackSerlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>EditFeedbackServlet</servlet-name>
+        <servlet-class>controller.marketer.EditFeedbackServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ListManageFeedback</servlet-name>
+        <servlet-class>controller.marketer.ListManageFeedback</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>AddFeedbackServlet</servlet-name>
+        <servlet-class>controller.AddFeedbackServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -195,5 +223,33 @@
     <servlet-mapping>
         <servlet-name>EditProfile</servlet-name>
         <url-pattern>/editprofile</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ListBlogServlet</servlet-name>
+        <url-pattern>/listblog</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ViewRoomServlet</servlet-name>
+        <url-pattern>/viewroom</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ViewBlogServlet</servlet-name>
+        <url-pattern>/viewblog</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DeleteFeedbackSerlet</servlet-name>
+        <url-pattern>/deletefeedback</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>EditFeedbackServlet</servlet-name>
+        <url-pattern>/editfeedback</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ListManageFeedback</servlet-name>
+        <url-pattern>/listmanagefeedback</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AddFeedbackServlet</servlet-name>
+        <url-pattern>/addfeedback</url-pattern>
     </servlet-mapping>
 </web-app>
