--- a/SWP291_Team2_SE1829NJ/web/WEB-INF/web.xml
+++ b/SWP291_Team2_SE1829NJ/web/WEB-INF/web.xml
@@ -148,6 +148,10 @@
         <servlet-name>ListRoomForCus</servlet-name>
         <servlet-class>controller.ListRoomForCus</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ViewOrder</servlet-name>
+        <servlet-class>controller.ViewOrder</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -291,5 +295,9 @@
     <servlet-mapping>
         <servlet-name>ListRoomForCus</servlet-name>
         <url-pattern>/listroomforcus</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ViewOrder</servlet-name>
+        <url-pattern>/vieworder</url-pattern>
     </servlet-mapping>
 </web-app>
