--- a/SWP291_Team2_SE1829NJ/web/WEB-INF/web.xml
+++ b/SWP291_Team2_SE1829NJ/web/WEB-INF/web.xml
@@ -152,6 +152,10 @@
         <servlet-name>DeleteFeedbackServlet</servlet-name>
         <servlet-class>controller.marketer.DeleteFeedbackServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>EditFeedbackForCusServlet</servlet-name>
+        <servlet-class>controller.EditFeedbackForCusServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -299,5 +303,9 @@
     <servlet-mapping>
         <servlet-name>DeleteFeedbackServlet</servlet-name>
         <url-pattern>/deletefb</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>EditFeedbackForCusServlet</servlet-name>
+        <url-pattern>/editfeedbackforcus</url-pattern>
     </servlet-mapping>
 </web-app>
