--- a/SWP291_Team2_SE1829NJ/web/WEB-INF/web.xml
+++ b/SWP291_Team2_SE1829NJ/web/WEB-INF/web.xml
@@ -156,6 +156,10 @@
         <servlet-name>EditFeedbackForCusServlet</servlet-name>
         <servlet-class>controller.EditFeedbackForCusServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>DeleteFeedbackForCusServlet</servlet-name>
+        <servlet-class>controller.DeleteFeedbackForCusServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -307,5 +311,9 @@
     <servlet-mapping>
         <servlet-name>EditFeedbackForCusServlet</servlet-name>
         <url-pattern>/editfeedbackforcus</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DeleteFeedbackForCusServlet</servlet-name>
+        <url-pattern>/deletefeedbackforcus</url-pattern>
     </servlet-mapping>
 </web-app>
