--- a/SWP291_Team2_SE1829NJ/web/WEB-INF/web.xml
+++ b/SWP291_Team2_SE1829NJ/web/WEB-INF/web.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
+    <filter>
+        <filter-name>RouterFilter</filter-name>
+        <filter-class>filter.RouterFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>RouterFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <servlet>
         <servlet-name>LoginController</servlet-name>
         <servlet-class>controller.LoginController</servlet-class>
@@ -156,7 +164,7 @@
         <servlet-name>ConfirmResetSixcode</servlet-name>
         <servlet-class>controller.ConfirmResetSixcode</servlet-class>
     </servlet>
-   <servlet>
+    <servlet>
         <servlet-name>EditFeedbackForCusServlet</servlet-name>
         <servlet-class>controller.EditFeedbackForCusServlet</servlet-class>
     </servlet>
